# uAgent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_core.cpp
docs/: ARCHITECTURE.md  CHECKPOINTS.md  OPERATIONS.md
include/: agent.hpp  api.hpp  cli.hpp  mcp.hpp  md.hpp  media.hpp  providers.hpp  tools.hpp  util.hpp
src/: main.cpp
tests/: agent_workflow_live.py  context_policy_sim.py  integration.py  test_core.cpp
